Fix HTML structure and update links
Updated links and corrected HTML structure.

Signed-off-by: Maestr7 <luminousgreen6@gmail.com>

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@ p.double {border-style: double;}
 <p class="double"></p><br>
 
 <p class="double">Escola de Prodigios<br>
-<a href="index.html"Capituo>Sinopse e Capítulos</a>
+<a href="https://maestr7.github.io/index-EsolaDeProdigios/"Capituo>Sinopse e Capítulos</a>
 </p><br>
 <p class="double">Entre dois mundos <br>
 <a href="https://maestr7.github.io/Minhas-Historiass/">EM TRABALHO</a>
 </p>
 
 </body>
+
 </htm>
